@@ -2,6 +2,8 @@ package com.mygdx.actors.towers;
 
 import static com.mygdx.helpers.Stats.STICKY_TOWER;
 
+import com.badlogic.gdx.Gdx;
+import com.mygdx.actors.enemies.Enemy;
 import com.mygdx.actors.tiles.Tile;
 import com.mygdx.gameworld.World;
 
@@ -19,5 +21,30 @@ public class StickyTower extends Tower{
         this.fireRate = STICKY_TOWER.fireRate;
         this.projectileSpeed = STICKY_TOWER.projectileSpeed;
         this.debuff = STICKY_TOWER.debuff;
+    }
+
+    @Override
+    public void adquireTarget(){
+
+        if (world.enemiesInScreen.isEmpty()) return;
+        if (target != null){
+            Gdx.app.log("tower target in range?: ", target.inRange(this) + "");
+        }
+        if (target == null || !target.isAlive() || !target.inRange(this)){
+            for (Enemy enemy: world.enemiesInScreen) {
+                if (enemy.inRange(this) && enemy.getDebuff() == null){
+                    target = enemy;
+                    Gdx.app.log("New tower target: ", target.toString());
+                    return;
+                }
+            }
+            super.adquireTarget();
+        }
+    }
+
+    @Override
+    public void fire(){
+        super.fire();
+        target = null;
     }
 }
