@@ -3,3 +3,12 @@
 > This is a simple Tower Defense game made with [libGDX](https://libgdx.com/).
 
 > Made by David Casalderrey Paz
+> 
+> WORK IN PROGRESS
+> 
+> How to play:
+> Stop enemies from reaching the end of the level by constructing towers.
+> Press on the white squares (fundations) to open the tower selection menu. Choose a tower and if you
+> got enough gold, you will build it. Towers attack enemies on their own.
+> Killing enemies gives you gold and increase your score. Letting them pass reduces your lifes.
+> Have fun!
